--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/arraçoamento.png
     - assets/grafico.png
     - assets/avatar.png
     - assets/logo.png
