--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   flutter:
     sdk: flutter
   intl: ^0.18.1
-  responsive_builder: ^0.7.0
+  flutter_icons: ^1.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -64,6 +64,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/turbidez_mensal.png
     - assets/oxigenio_mensal.png
     - assets/niveldagua_mensal.png
     - assets/arraçoamento_mensal.png
