--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,12 @@ dependencies:
   flutter:
     sdk: flutter
   intl: ^0.18.1
-
+  firebase_core: ^2.20.0
+  firebase_auth:
+  firebase_core_web: ^2.9.0
+  #firebase_auth_platform_interface: ^7.0.5
+  #firebase_auth_web: ^5.8.8
+  #firebase_core_platform_interface: ^5.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -49,7 +54,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
