--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -2,7 +2,6 @@ plugins {
     id "com.android.application"
     id "kotlin-android"
     id "dev.flutter.flutter-gradle-plugin"
-
 }
 
 def localProperties = new Properties()
@@ -66,6 +65,4 @@ flutter {
     source '../..'
 }
 
-dependencies {
-    implementation(platform("com.google.firebase:firebase-bom:32.2.0"))
-}
+dependencies {}
