--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,12 +32,8 @@ dependencies:
   flutter:
     sdk: flutter
   intl: ^0.18.1
-  firebase_core: ^2.20.0
-  firebase_auth:
-  firebase_core_web: ^2.9.0
-  #firebase_auth_platform_interface: ^7.0.5
-  #firebase_auth_web: ^5.8.8
-  #firebase_core_platform_interface: ^5.0.0
+  firebase_core: ^2.24.0
+  firebase_auth: ^4.15.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
