--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,12 +31,12 @@ dependencies:
   flutter:
     sdk: flutter
 
-  shared_preferences: ^2.0.12
+  shared_preferences: ^2.0.13
   intl: ^0.18.1
   firebase_core: ^2.31.0
   firebase_auth: ^4.19.5
   mqtt_client: ^10.0.0
-
+  flutter_speed_dial: ^6.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
