--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_auth: ^4.19.5
   mqtt_client: ^10.0.0
   flutter_speed_dial: ^6.0.0
+  graphic: ^2.2.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
